add: header in the makefile

--- a/rank-2/minitalk/V2/Makefile
+++ b/rank-2/minitalk/V2/Makefile
@@ -1,11 +1,23 @@
-# Big Header
+# ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+# ║                                                                                                                       ║
+# ║   _____ ______       ___        ________       ___      _________      ________        ___             ___  __        ║
+# ║  |\   _ \  _   \    |\  \      |\   ___  \    |\  \    |\___   ___\   |\   __  \      |\  \          |\  \|\  \       ║
+# ║  \ \  \\\__\ \  \   \ \  \     \ \  \\ \  \   \ \  \   \|___ \  \_|   \ \  \|\  \     \ \  \         \ \  \/  /|_     ║
+# ║   \ \  \\|__| \  \   \ \  \     \ \  \\ \  \   \ \  \       \ \  \     \ \   __  \     \ \  \         \ \   ___  \    ║
+# ║    \ \  \    \ \  \   \ \  \     \ \  \\ \  \   \ \  \       \ \  \     \ \  \ \  \     \ \  \____     \ \  \\ \  \   ║
+# ║     \ \__\    \ \__\   \ \__\     \ \__\\ \__\   \ \__\       \ \__\     \ \__\ \__\     \ \_______\    \ \__\\ \__\  ║
+# ║      \|__|     \|__|    \|__|      \|__| \|__|    \|__|        \|__|      \|__|\|__|      \|_______|     \|__| \|__|  ║
+# ║                                                                                                                       ║
+# ║   by nduvoid@student.42mulhouse.fr                                                                                    ║
+# ║                                                                                                                       ║
+# ║                                                                                                                       ║
+# ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
 
 # ***************************************************** #
 # *                 Configuation                      * #
 # ***************************************************** #
 
 MAKEFLAGS += --no-print-directory
-NO_NOM := $(findstring --no-norm,$(MAKEFLAGS))
 
 # ***************************************************** #
 # *                    Variables                      * #
@@ -61,7 +73,7 @@ $(DIR_OBJ)/%.o: $(DIR_SRC)/%.c
 	$(call compile_object, $(IFLAGS) $(DEBUGFLAGS), $(OBJ_SERVER) $(OBJ_CLIENT), $(COLOR_YELLOW))
 
 $(LIBFT):
-	-@make -C $(DIR_LIBFT)
+	-@make -C $(DIR_LIBFT) NO_HEADER=true
 
 # ***************************************************** #
 # *                    Clean Rules                    * #
@@ -106,7 +118,23 @@ echo:
 
 header:
 	@clear
-	@printf "\n/* Big Header */\n"
+	@printf "\n \
+	 ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗ \n \
+	 ║                                                                                                                       ║ \n \
+	 ║   _____ ______       ___        ________       ___      _________      ________        ___           ___  __          ║ \n \
+	 ║  |\   _ \  _   \    |\  \      |\   ___ \     |\  \    |\___   ___\   |\   __  \      |\  \         |\  \|\  \        ║ \n \
+	 ║  \ \  \\\__\  \   \   \ \  \     \ \  \\ \  \    \ \  \   \|___ \  \_|   \ \  \|\  \     \ \  \        \ \  \/  /|_      ║ \n \
+	 ║   \ \  \\|__| \   \   \ \  \     \ \  \\ \  \    \ \  \       \ \  \     \ \   __  \     \ \  \        \ \   ___  \     ║ \n \
+	 ║    \ \  \    \ \  \   \ \  \     \ \  \\ \  \    \ \  \       \ \  \     \ \  \ \  \     \ \  \____    \ \  \\  \  \    ║ \n \
+	 ║     \ \__\    \ \__\   \ \__\     \ \__\\ \__\    \ \__\       \ \__\     \ \__\ \__\     \ \_______\   \ \__\\  \__\   ║ \n \
+	 ║      \|__|     \|__|    \|__|      \|__| \|__|    \|__|        \|__|      \|__|\|__|      \|_______|   \|__|   \__|   ║ \n \
+	 ║                                                                                                                       ║ \n \
+	 ║    by nduvoid@student.42mulhouse.fr                                                                                   ║ \n"
+	@$(call write_goals)
+	@printf " \
+	 ║                                                                                                                       ║ \n \
+	 ║                                                                                                                       ║ \n \
+	 ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝\n"
 
 norm:
 	@errors=$$(norminette | grep "Error"); \
@@ -118,10 +146,10 @@ norm:
 	fi
 
 define write_goals
-	line_size=97; \
+	line_size=106; \
 	line="$(if $(MAKECMDGOALS), $(MAKECMDGOALS), all)"; \
 	line_size=$$(( $$line_size - $${#line} )); \
-	printf "║    \e[4mRule(s):\e[0m %s%*s\e[0m║\n" "$$line" $$line_size " "
+	printf "  ║    \e[4mRule(s):\e[0m %s%*s\e[0m║\n" "$$line" $$line_size " "
 endef
 
 # Helper function to print a progress bar
