--- a/rank-2/minitalk/V2/libft/Makefile
+++ b/rank-2/minitalk/V2/libft/Makefile
@@ -12,7 +12,9 @@
 # ║                                                                                ║
 # ╚════════════════════════════════════════════════════════════════════════════════╝
 
-MAKEFLAGS += --no-print-directory	# no Entering / Leaving messages
+MAKEFLAGS +=	--no-print-directory	# no Entering / Leaving messages
+NO_NORME =		false					# no norminette
+NO_HEADER =		false					# no header
 
 # ***************************************************** #
 # *                 Variable                          * #
@@ -153,7 +155,7 @@ OBJ_GNL = $(SRC_GNL:.c=.o)
 
 .PHONY: all
 
-all: header norm $(NAME)
+all: header $(NAME)
 
 $(NAME): compile
 	@$(AR) $(ARFLAGS) $(NAME) $(OBJ_LIBFT) $(OBJ_PRINTF) $(OBJ_GNL)
@@ -228,21 +230,26 @@ norm:
 	fi
 
 header:
-	@echo "\n"
-	@echo "╔════════════════════════════════════════════════════════════════════════════════╗"
-	@echo "║   ___               ___          ________          ________      _________     ║"
-	@echo "║  |\  \             |\  \        |\   __  \        |\  _____\    |\___   ___\   ║"
-	@echo "║  \ \  \            \ \  \       \ \  \|\ /_       \ \  \__/     \|___ \  \_|   ║"
-	@echo "║   \ \  \            \ \  \       \ \   __  \       \ \   __\         \ \  \    ║"
-	@echo "║    \ \  \            \ \  \       \ \  \|\  \       \ \  \_|          \ \  \   ║"
-	@echo "║     \ \  \____        \ \  \       \ \  \|\  \       \ \  \_|          \ \  \  ║"
-	@echo "║      \ \_______\       \ \__\       \ \_______\       \ \__\            \ \__\ ║"
-	@echo "║       \|_______|        \|__|        \|_______|        \|__|             \|__| ║"
-	@echo "║                                                                                ║"
-	@echo "║  by nduvoid                                                                    ║"
-	@echo "║                                                                                ║"
-	@echo "╚════════════════════════════════════════════════════════════════════════════════╝"
-	@echo "\n"
+	@if $(NO_HEADER) == true; then \
+		echo ""; \
+	else \
+		@clear; \
+		@echo "\n" \
+		@echo "╔════════════════════════════════════════════════════════════════════════════════╗" \
+		@echo "║   ___               ___          ________          ________      _________     ║" \
+		@echo "║  |\  \             |\  \        |\   __  \        |\  _____\    |\___   ___\   ║" \
+		@echo "║  \ \  \            \ \  \       \ \  \|\ /_       \ \  \__/     \|___ \  \_|   ║" \
+		@echo "║   \ \  \            \ \  \       \ \   __  \       \ \   __\         \ \  \    ║" \
+		@echo "║    \ \  \            \ \  \       \ \  \|\  \       \ \  \_|          \ \  \   ║" \
+		@echo "║     \ \  \____        \ \  \       \ \  \|\  \       \ \  \_|          \ \  \  ║" \
+		@echo "║      \ \_______\       \ \__\       \ \_______\       \ \__\            \ \__\ ║" \
+		@echo "║       \|_______|        \|__|        \|_______|        \|__|             \|__| ║" \
+		@echo "║                                                                                ║" \
+		@echo "║  by nduvoid                                                                    ║" \
+		@echo "║                                                                                ║" \
+		@echo "╚════════════════════════════════════════════════════════════════════════════════╝" \
+		@echo "\n"; \
+	fi \
 
 # ***************************************************** #
 # *                    Functions                      * #
