add: seconde bonus and some minor optimisation

--- a/rank-2/minitalk/V2/Makefile
+++ b/rank-2/minitalk/V2/Makefile
@@ -58,6 +58,9 @@ _client: $(LIBFT) $(NAME_CLIENT)
 
 _server: $(LIBFT) $(NAME_SERVER)
 
+bonus:
+	$(MAKE) all CFLAGS="$(CFLAGS) -D BONUS=1"
+
 # ***************************************************** #
 # *                  Compiling                        * #
 # ***************************************************** #
